# RAG_engine

./: .gitignore  CODE_REVIEW.md  CODE_REVIEW_BUG_FOCUSED.md  README.md
homework_reviewer_llm/: README.md  pyproject.toml
homework_reviewer_llm/docs/: METRICS.md
homework_reviewer_llm/experiments/: EXPERIMENT_REPORT.md
homework_reviewer_llm/fixtures/: raw_homework.jsonl  raw_homework_record.example.json  reviewer_manual_export.csv
homework_reviewer_llm/schemas/: review_output.schema.json  review_output_v2.schema.json
homework_reviewer_llm/scripts/: batch_inference.py  build_contrastive_sft_jsonl.py  build_dataset.py  build_sft_jsonl.py  csv_to_raw_jsonl.py  evaluate.py  inference_mvp.py  make_dummy_predictions.py  pipeline_local.py  print_train_command.py  sanity_eval_workdir.py
homework_reviewer_llm/templates/: blind_review_form.md
homework_reviewer_llm/tests/: test_contrastive.py  test_csv_to_raw_jsonl.py  test_guardrails.py  test_metrics.py  test_pipeline_local.py  test_pipeline_scripts.py  test_post_pipeline_scripts.py  test_sanitize.py  test_schema.py  test_sft_format.py  test_split.py  test_split_strict.py
homework_reviewer_llm/training/: Dockerfile.gpu  run_cloud_sweep.sh  train_qlora.py
review_assistant_repo/: .env.example  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
review_assistant_repo/alembic/: env.py
review_assistant_repo/app/: config.py  db.py  logging_utils.py  main.py  metrics.py  models.py  schemas.py
review_assistant_repo/examples/: sample_html_practicum.html  sample_notebook.ipynb  sample_query.sql  sample_query_bad.sql
review_assistant_repo/frontend/: README.md  package-lock.json  package.json
review_assistant_repo/notebooks/: colab_build_comment_catalog.ipynb  colab_project_training_batch.ipynb  colab_reviewer_reference_examples.ipynb
review_assistant_repo/scripts/: analyze_my_reviewed_notebooks.py  build_first_iteration_candidate_dataset.py  build_review_training_corpus.py  build_reviewer_comment_catalog.py  build_reviewer_insertion_memory_from_archive.py  check_readme_endpoints.py  demo_requests.sh  enable_playwright_capture.sh  evaluate_first_iteration_autoreview.py  evaluate_student_qa_quality.py  export_live_reviewer_artifacts.py  extract_reviewer_insertions.py  import_project_brief.py  import_senior_review_notebook.py  run_rl_train_worker.py  smoke_notebook_review.sh  wiki_html_to_course_kb.py
review_assistant_repo/tests/: conftest.py  test_api_artifact_filters.py  test_api_datalens.py  test_api_html.py  test_api_notebook.py  test_api_pdf.py  test_api_sql.py  test_api_visual_summary.py  test_capture_metrics_api.py  test_changelog_api.py  (+48 more)
(+144 files in other folders)
