[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homework-reviewer-llm"
version = "0.1.0"
description = "Эксперимент: дообучение open-source LLM для ревью домашних заданий (SFT/QLoRA, метрики, MVP)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.5",
]

[project.optional-dependencies]
train = [
  "torch>=2.1",
  "transformers>=4.38",
  "peft>=0.8",
  "accelerate>=0.27",
  "datasets>=2.16",
  "trl>=0.8",
  "bitsandbytes>=0.42; platform_system != 'Darwin'",
]
dev = [
  "pytest>=7.4",
  "homework-reviewer-llm[train]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
