[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-assistant-practicum"
version = "0.9.10"
description = "Hybrid review assistant for Practicum-style homework projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "nbformat>=5.10.4",
    "sqlglot>=25.5.1",
    "PyMuPDF>=1.24.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "PyJWT[crypto]>=2.8.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "nbclient>=0.10.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
browser = [
    "playwright>=1.54.0"
]
analysis = [
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.2.0",
]
# Lightweight: Gymnasium envs for /rl/episodes/run (gymnasium_discrete).
rl = [
    "gymnasium>=1.0.0",
]
# Heavy (PyTorch): Stable-Baselines3 training + policy=sb3. Use: pip install -e ".[rl,rl_sb3]"
rl_sb3 = [
    "stable-baselines3>=2.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = true
files = ["app"]

[[tool.mypy.overrides]]
module = [
    "app.analyzers.sql_ast",
    "app.parsers.sql",
    "app.utils.image_regions",
]
ignore_errors = true
